--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,8 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>This is my first React Website</h1>
+    <h1>Bienvenido a mi primera Pagina con React</h1>
 
-<H2>Hila</H2>
     
     <div id="root"></div>
   
